# BMP_ImageProcessor

./: CMakeLists.txt  README.md  abstract_filter.h  crop_filter.cpp  crop_filter.h  edge_detection_filter.cpp  edge_detection_filter.h  file_worker.cpp  file_worker.h  filters_include.h  gaussian_blur_filter.cpp  gaussian_blur_filter.h  grayscale_filter.h  image.h  image_handler.cpp  image_handler.h  image_processor.cpp  interesting_filter.cpp  interesting_filter.h  matrix_filter.cpp  matrix_filter.h  negative_filter.h  perlin_noise.h  sharpening_filter.cpp
