add_executable(
    image_processor
    image_processor.cpp
    file_worker.cpp
    image.cpp
    image_handler.cpp
    matrix_filter.cpp
    sharpening_filter.cpp
    negative_filter.cpp
    grayscale_filter.cpp
    crop_filter.cpp
    edge_detection_filter.cpp
    gaussian_blur_filter.cpp
    interesting_filter.cpp
    perlin_noise.cpp
)
